# ST-Package

./: .replit  manage.py  package-lock.json  package.json  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
bookings/: models.py  urls.py  views.py
client/src/: App.tsx  index.css
client/src/components/admin/: Dashboard.tsx
client/src/components/common/: Header.tsx
client/src/pages/admin/: bookings.tsx
sanskruti_travels/: asgi.py  settings.py  urls.py  wsgi.py
server/: email.ts  index.ts  routes.ts
templates/includes/: footer.html  header.html
templates/layouts/: base.html
templates/travel/: home.html
travel/: models.py  urls.py  views.py
