[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.1",
    "django-bootstrap5>=25.1",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "django-tailwind>=4.0.1",
    "pillow>=11.2.1",
]
